--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>My First JavaScript Webpage</title>
+    <title>Module 01 JavaScript Activity</title>
 </head>
 <body>
-    <h1>My first JavaScript webpage.</h1>
 
-    <script>
-        console.log("This shows in the console");
-    </script>
+<h1>JavaScript Variable Demonstration</h1>
+<p>The script will run automatically.</p>
+
+<script src="script.js"></script>
+
 </body>
 </html>
